# torch-extension-sycl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  patch_wa_cutlass.diff  pyproject.toml  setup.py
extension_sycl/: torch_extension.cpp
extension_sycl/csrc/: CMakeLists.txt  add_fp16.cpp  cutlass_gemm.cpp  cutlass_gemm.hpp
include/: custom_ops.hpp
tests/: test_add.py  test_gemm.py
